--- a/frontend/my-react-app/src/components/layout/Header.css
+++ b/frontend/my-react-app/src/components/layout/Header.css
@@ -1,7 +1,6 @@
 /* Header.css */
 .header {
   display: flex;
-  justify-content: space-between;
   padding: 20px;
   background-color: #8A9972; /* 전통 한지 색상 */
 }
@@ -10,6 +9,7 @@
   font-family: 'Noto Serif KR', serif; /* 한글 서체 사용 */
   font-size: 24px;
   color: #555;
+  margin-right: auto;
 }
 
 .nav {
@@ -18,9 +18,12 @@
   width: 100%;
 }
 
+.greeting {
+  margin-left: auto;
+}
+
 .btn {
   padding: 5px 10px;
-  margin-left: auto;
   background-color: #586149;
   color: white;
   border-radius: 50px;
@@ -28,6 +31,14 @@
   font-size: 15px;
   cursor: pointer;
   transition: background-color 0.3s;
+}
+
+.btn-logged-in {
+  margin-left: 10px;  /* 로그인된 상태일 때 */
+}
+
+.btn-logged-out {
+  margin-left: auto;  /* 로그인되지 않은 상태일 때 */
 }
 
 .nav .btn:hover {
