--- a/frontend/my-react-app/src/pages/MyPage.css
+++ b/frontend/my-react-app/src/pages/MyPage.css
@@ -1,6 +1,13 @@
 a{
     color:#474747;
 }
+h3 {
+    font-size: 1.5rem;
+}
+.nickname {
+    font-weight: bold;
+    margin-bottom: 20px;
+}
 /* 네비탭 설정 */
 .nav-link{
     color:#2C2C2C;
@@ -12,3 +19,18 @@ a{
     background-color: #D9D9D9;
     color:#2C2C2C;
 }
+
+.btn {
+    padding: 5px 10px;
+    background-color: #586149;
+    color: white;
+    border-radius: 50px;
+    font-family: 'Noto Serif KR', serif;
+    font-size: 15px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .btn:hover {
+    background-color: #454D39;
+  }
