--- a/frontend/my-react-app/src/components/SearchSection.css
+++ b/frontend/my-react-app/src/components/SearchSection.css
@@ -1,12 +1,15 @@
 /* 기본 설정 */
 .card-section {
   font-family: 'Arial', sans-serif;
-  background-color: #f8f9fa;
+  background-color: #F3E0D6;
   padding: 20px;
 }
 
 .card-sec{
   margin: 0 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* 기본적으로 왼쪽 정렬 */
 }
 
 .card-section h5 {
@@ -19,17 +22,21 @@
   display: flex;
   flex-wrap: wrap; /* 넘칠 때 줄 바꿈 */
   gap: 8px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .filter-btn {
   color: #33382A;
   padding: 10px 15px;
-  background-color: #e0e0e0;
+  background-color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   white-space: nowrap;
+}
+
+.All-btn {
+  margin: 0 10px 15px auto;
 }
 
 .filter-btn:hover {
@@ -63,7 +70,6 @@
 
 .card-image-placeholder {
   flex-shrink: 0;
-  background-color: #eee;
   width: 150px;  /* 이미지 컨테이너 너비 */
   height: 150px; /* 이미지 컨테이너 높이 */
   margin-right: 16px;
