--- a/frontend/my-react-app/src/components/SignupCardComponent.css
+++ b/frontend/my-react-app/src/components/SignupCardComponent.css
@@ -78,9 +78,7 @@
 .logotitle{
     /* Title */
     height: 86px;
-
-    /* Title Hero */
-    font-family: 'Inter';
+    font-family: 'Noto Serif KR', serif; /* 한글 서체 사용 */
     font-style: normal;
     font-weight: 700;
     font-size: 72px;
