--- a/frontend/my-react-app/src/components/ProductCard.css
+++ b/frontend/my-react-app/src/components/ProductCard.css
@@ -8,20 +8,16 @@
     display: flex;
   }
   
-  .imageContainer {
+  .image-Container {
     flex-shrink: 0;
     width: 300px;
     height: 250px;
-    background-color: #f0f0f0;
+    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  
-  .imageContainer::after {
-    content: '이미지 자리';
-    color: #888;
-    font-size: 16px;
+    border: 1px solid #8A9973;
+    border-radius: 10px;
   }
   
   .productDetails {
