--- a/frontend/my-react-app/src/pages/MyPage.css
+++ b/frontend/my-react-app/src/pages/MyPage.css
@@ -25,12 +25,17 @@ h3 {
     background-color: #586149;
     color: white;
     border-radius: 50px;
-    font-family: 'Noto Serif KR', serif;
     font-size: 15px;
     cursor: pointer;
     transition: background-color 0.3s;
+    font-size: 14px;
   }
   
   .btn:hover {
     background-color: #454D39;
+    color: white;
+  }
+
+  .camera:hover {
+    color: #F3E0D6;
   }
