✅ footer 수정 + 색상 수정

--- a/frontend/my-react-app/src/components/layout/Footer.css
+++ b/frontend/my-react-app/src/components/layout/Footer.css
@@ -10,6 +10,9 @@
     background-color: #f8f8f8;
     box-shadow: 0 -2px 10px rgba(0,0,0,0.1); /* 상단 그림자 효과 추가 */
   }
+.footer h5 {
+  font-weight: bold;
+}
   
   .footer-left, .footer-middle, .footer-right {
     display: flex;
@@ -20,6 +23,11 @@
   .footer-left .social-icons {
     display: flex;
     gap: 10px;
+  }
+
+  .footer-left img {
+    width: 80px;
+    height: 80px;
   }
   
   .footer-middle ul, .footer-right ul {
@@ -34,11 +42,16 @@
   .footer-middle ul li a, .footer-right ul li a {
     text-decoration: none;
     transition: color 0.3s ease; /* 부드러운 색상 전환 효과 */
+    font-size: 14px;
 }
 
 .footer-middle ul li a:hover, .footer-right ul li a:hover {
     color: #ff6347; /* 호버 시 색상 변경 */
     text-decoration: underline;
+}
+
+.footer-right img{
+  border-radius: 50px;
 }
 
 .social-icon {
@@ -47,4 +60,11 @@
 
 .social-icon:hover {
     transform: scale(1.1); /* 호버 시 아이콘 확대 */
+}
+.github-profile {
+  display: flex;
+}
+
+.github-profile img {
+  margin-right: 10px;
 }
